# llm-server

./: .gitignore  CLAUDE.md  configure_vscode.py  pyproject.toml  start-server.sh
llm_server/: __init__.py  config.py  main.py  systemd_service.py
llm_server/adapters/: __init__.py  model_adapters.py  openai_adapter.py  tool_adapter.py
llm_server/routes/: __init__.py  chat.py  completions.py  embeddings.py  models.py
llm_server/streaming/: __init__.py  sse.py
